// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tentative page (desktop) > in select mode with books ticked > markup 1`] = `
<DocumentFragment>
  <div>
    <div
      style="display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 20px; gap: 12px; flex-wrap: wrap;"
    >
      <div>
        <h1
          style="font-size: 24px; font-weight: 700; color: rgb(236, 234, 244); margin-bottom: 4px;"
        >
          Tentative Torrents
        </h1>
        <p
          style="font-size: 14px; color: rgb(136, 134, 160);"
        >
          Announces that passed every filter except the author allow-list.
        </p>
      </div>
      <div
        style="display: flex; gap: 8px; flex-wrap: wrap; align-items: center;"
      >
        <span
          style="font-size: 13px; color: rgb(136, 134, 160);"
        >
          1 selected
        </span>
        <button
          style="background: transparent; color: rgb(214, 212, 224); border: 1px solid rgb(58, 60, 86); border-radius: 8px; font-weight: 600; cursor: pointer; padding: 4px 10px; font-size: 12px;"
        >
          Select all
        </button>
        <button
          style="background: rgb(228, 184, 104); color: rgb(26, 28, 48); border: 1px solid rgb(228, 184, 104); border-radius: 8px; font-weight: 600; cursor: pointer; padding: 4px 10px; font-size: 12px;"
        >
          Approve Selected
        </button>
        <button
          style="background: rgb(224, 96, 96); color: rgb(26, 28, 48); border: 1px solid rgb(224, 96, 96); border-radius: 8px; font-weight: 600; cursor: pointer; padding: 4px 10px; font-size: 12px;"
        >
          Reject Selected
        </button>
        <button
          style="background: transparent; color: rgb(214, 212, 224); border: 1px solid rgb(58, 60, 86); border-radius: 8px; font-weight: 600; cursor: pointer; padding: 4px 10px; font-size: 12px;"
        >
          Dismiss Selected
        </button>
        <button
          style="background: transparent; color: rgb(214, 212, 224); border: 1px solid rgb(58, 60, 86); border-radius: 8px; font-weight: 600; cursor: pointer; padding: 4px 10px; font-size: 12px;"
        >
          Cancel
        </button>
      </div>
    </div>
    <div
      style="display: flex; flex-direction: column; gap: 12px;"
    >
      <article
        style="background: rgb(34, 36, 56); border: 2px solid rgb(228, 184, 104); border-radius: 12px; padding: 16px; display: grid; grid-template-columns: 24px 1fr; gap: 16px; animation: slide-up 0.2s ease-out; cursor: pointer; user-select: none;"
      >
        <input
          style="width: 20px; height: 20px; align-self: center; cursor: pointer;"
          type="checkbox"
        />
        <div
          style="min-width: 0px;"
        >
          <div
            style="display: flex; align-items: baseline; gap: 10px; flex-wrap: wrap; margin-bottom: 4px;"
          >
            <h3
              style="font-size: 16px; font-weight: 700; color: rgb(236, 234, 244); word-break: break-word;"
            >
              The Glass Orchard
            </h3>
            <span
              style="font-size: 11px; color: rgb(26, 28, 48); background: rgb(224, 192, 96); padding: 2px 8px; border-radius: 99px; font-weight: 700;"
            >
              VIP
            </span>
          </div>
          <div
            style="font-size: 14px; color: rgb(214, 212, 224); margin-bottom: 8px;"
          >
            Ada Quill
          </div>
          <dl
            style="display: grid; grid-template-columns: auto 1fr; gap: 4px 12px; font-size: 12px;"
          >
            <dt
              style="color: rgb(136, 134, 160); font-weight: 600; text-transform: uppercase; letter-spacing: 0.3px;"
            >
              Category
            </dt>
            <dd
              style="color: rgb(214, 212, 224); word-break: break-word;"
            >
              Ebooks - Fantasy
            </dd>
            <dt
              style="color: rgb(136, 134, 160); font-weight: 600; text-transform: uppercase; letter-spacing: 0.3px;"
            >
              Tags
            </dt>
            <dd
              style="color: rgb(214, 212, 224); word-break: break-word;"
            >
              <span
                style="display: inline-flex; gap: 4px; flex-wrap: wrap;"
              >
                <span
                  style="font-size: 10px; padding: 1px 7px; border-radius: 99px; background: rgb(30, 32, 52); color: rgb(214, 212, 224); border: 1px solid rgb(46, 48, 72); white-space: nowrap;"
                >
                  Fantasy
                </span>
                <span
                  style="font-size: 10px; padding: 1px 7px; border-radius: 99px; background: rgb(30, 32, 52); color: rgb(214, 212, 224); border: 1px solid rgb(46, 48, 72); white-space: nowrap;"
                >
                  Mystery
                </span>
              </span>
            </dd>
            <dt
              style="color: rgb(136, 134, 160); font-weight: 600; text-transform: uppercase; letter-spacing: 0.3px;"
            >
              Language
            </dt>
            <dd
              style="color: rgb(214, 212, 224); word-break: break-word;"
            >
              English
            </dd>
            <dt
              style="color: rgb(136, 134, 160); font-weight: 600; text-transform: uppercase; letter-spacing: 0.3px;"
            >
              Format
            </dt>
            <dd
              style="color: rgb(214, 212, 224); word-break: break-word;"
            >
              epub
            </dd>
            <dt
              style="color: rgb(136, 134, 160); font-weight: 600; text-transform: uppercase; letter-spacing: 0.3px;"
            >
              MAM ID
            </dt>
            <dd
              style="color: rgb(214, 212, 224); word-break: break-word;"
            >
              <a
                href="https://www.myanonamouse.net/t/900011"
                rel="noreferrer"
                style="color: rgb(228, 184, 104); text-decoration: none;"
                target="_blank"
              >
                900011
              </a>
            </dd>
            <dt
              style="color: rgb(136, 134, 160); font-weight: 600; text-transform: uppercase; letter-spacing: 0.3px;"
            >
              Captured
            </dt>
            <dd
              style="color: rgb(214, 212, 224); word-break: break-word;"
            >
              10/9/2026, 12:10:00 PM
            </dd>
          </dl>
        </div>
      </article>
      <article
        style="background: rgb(34, 36, 56); border: 1px solid rgb(46, 48, 72); border-radius: 12px; padding: 16px; display: grid; grid-template-columns: 24px 80px 1fr; gap: 16px; animation: slide-up 0.2s ease-out; cursor: pointer; user-select: none;"
      >
        <input
          style="width: 20px; height: 20px; align-self: center; cursor: pointer;"
          type="checkbox"
        />
        <div
          style="width: 80px; height: 120px; border-radius: 6px; background: rgb(30, 32, 52); overflow: hidden; flex-shrink: 0;"
        >
          <img
            alt="Cover"
            src="/api/v1/covers/staging%2Ftentative-covers%2F62.jpg"
            style="width: 80px; height: 120px; object-fit: cover; border-radius: 6px; border: 1px solid rgb(46, 48, 72);"
          />
        </div>
        <div
          style="min-width: 0px;"
        >
          <div
            style="display: flex; align-items: baseline; gap: 10px; flex-wrap: wrap; margin-bottom: 4px;"
          >
            <h3
              style="font-size: 16px; font-weight: 700; color: rgb(236, 234, 244); word-break: break-word;"
            >
              Saltwind
            </h3>
          </div>
          <div
            style="font-size: 14px; color: rgb(214, 212, 224); margin-bottom: 8px;"
          >
            Bram Okafor
          </div>
          <dl
            style="display: grid; grid-template-columns: auto 1fr; gap: 4px 12px; font-size: 12px;"
          >
            <dt
              style="color: rgb(136, 134, 160); font-weight: 600; text-transform: uppercase; letter-spacing: 0.3px;"
            >
              Category
            </dt>
            <dd
              style="color: rgb(214, 212, 224); word-break: break-word;"
            >
              Audiobooks - Science Fiction
            </dd>
            <dt
              style="color: rgb(136, 134, 160); font-weight: 600; text-transform: uppercase; letter-spacing: 0.3px;"
            >
              Language
            </dt>
            <dd
              style="color: rgb(214, 212, 224); word-break: break-word;"
            >
              English
            </dd>
            <dt
              style="color: rgb(136, 134, 160); font-weight: 600; text-transform: uppercase; letter-spacing: 0.3px;"
            >
              Format
            </dt>
            <dd
              style="color: rgb(214, 212, 224); word-break: break-word;"
            >
              m4b
            </dd>
            <dt
              style="color: rgb(136, 134, 160); font-weight: 600; text-transform: uppercase; letter-spacing: 0.3px;"
            >
              MAM ID
            </dt>
            <dd
              style="color: rgb(214, 212, 224); word-break: break-word;"
            >
              <a
                href="https://www.myanonamouse.net/t/900012"
                rel="noreferrer"
                style="color: rgb(228, 184, 104); text-decoration: none;"
                target="_blank"
              >
                900012
              </a>
            </dd>
            <dt
              style="color: rgb(136, 134, 160); font-weight: 600; text-transform: uppercase; letter-spacing: 0.3px;"
            >
              Captured
            </dt>
            <dd
              style="color: rgb(214, 212, 224); word-break: break-word;"
            >
              10/9/2026, 1:30:00 PM
            </dd>
          </dl>
        </div>
      </article>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tentative page (desktop) > in select mode with books ticked > requests 1`] = `
[
  "GET /v1/tentative",
]
`;

exports[`Tentative page (desktop) > two held announces > markup 1`] = `
<DocumentFragment>
  <div>
    <div
      style="display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 20px; gap: 12px; flex-wrap: wrap;"
    >
      <div>
        <h1
          style="font-size: 24px; font-weight: 700; color: rgb(236, 234, 244); margin-bottom: 4px;"
        >
          Tentative Torrents
        </h1>
        <p
          style="font-size: 14px; color: rgb(136, 134, 160);"
        >
          Announces that passed every filter except the author allow-list.
        </p>
      </div>
      <div
        style="display: flex; gap: 8px; flex-wrap: wrap; align-items: center;"
      >
        <button
          style="background: transparent; color: rgb(214, 212, 224); border: 1px solid rgb(58, 60, 86); border-radius: 8px; font-weight: 600; cursor: pointer; padding: 4px 10px; font-size: 12px;"
        >
          Select…
        </button>
        <button
          style="background: rgb(228, 184, 104); color: rgb(26, 28, 48); border: 1px solid rgb(228, 184, 104); border-radius: 8px; font-weight: 600; cursor: pointer; padding: 4px 10px; font-size: 12px;"
        >
          Approve All (2)
        </button>
        <button
          style="background: rgb(224, 96, 96); color: rgb(26, 28, 48); border: 1px solid rgb(224, 96, 96); border-radius: 8px; font-weight: 600; cursor: pointer; padding: 4px 10px; font-size: 12px;"
        >
          Reject All
        </button>
        <button
          style="background: rgb(224, 96, 96); color: rgb(26, 28, 48); border: 1px solid rgb(224, 96, 96); border-radius: 8px; font-weight: 600; cursor: pointer; padding: 4px 10px; font-size: 12px;"
          title="Clear without adding authors to any review list"
        >
          Clear all
        </button>
      </div>
    </div>
    <div
      style="display: flex; flex-direction: column; gap: 12px;"
    >
      <article
        style="background: rgb(34, 36, 56); border: 1px solid rgb(46, 48, 72); border-radius: 12px; padding: 16px; display: grid; grid-template-columns: 1fr auto; gap: 16px; animation: slide-up 0.2s ease-out; cursor: default; user-select: auto;"
      >
        <div
          style="min-width: 0px;"
        >
          <div
            style="display: flex; align-items: baseline; gap: 10px; flex-wrap: wrap; margin-bottom: 4px;"
          >
            <h3
              style="font-size: 16px; font-weight: 700; color: rgb(236, 234, 244); word-break: break-word;"
            >
              The Glass Orchard
            </h3>
            <span
              style="font-size: 11px; color: rgb(26, 28, 48); background: rgb(224, 192, 96); padding: 2px 8px; border-radius: 99px; font-weight: 700;"
            >
              VIP
            </span>
          </div>
          <div
            style="font-size: 14px; color: rgb(214, 212, 224); margin-bottom: 8px;"
          >
            Ada Quill
          </div>
          <dl
            style="display: grid; grid-template-columns: auto 1fr; gap: 4px 12px; font-size: 12px;"
          >
            <dt
              style="color: rgb(136, 134, 160); font-weight: 600; text-transform: uppercase; letter-spacing: 0.3px;"
            >
              Category
            </dt>
            <dd
              style="color: rgb(214, 212, 224); word-break: break-word;"
            >
              Ebooks - Fantasy
            </dd>
            <dt
              style="color: rgb(136, 134, 160); font-weight: 600; text-transform: uppercase; letter-spacing: 0.3px;"
            >
              Tags
            </dt>
            <dd
              style="color: rgb(214, 212, 224); word-break: break-word;"
            >
              <span
                style="display: inline-flex; gap: 4px; flex-wrap: wrap;"
              >
                <span
                  style="font-size: 10px; padding: 1px 7px; border-radius: 99px; background: rgb(30, 32, 52); color: rgb(214, 212, 224); border: 1px solid rgb(46, 48, 72); white-space: nowrap;"
                >
                  Fantasy
                </span>
                <span
                  style="font-size: 10px; padding: 1px 7px; border-radius: 99px; background: rgb(30, 32, 52); color: rgb(214, 212, 224); border: 1px solid rgb(46, 48, 72); white-space: nowrap;"
                >
                  Mystery
                </span>
              </span>
            </dd>
            <dt
              style="color: rgb(136, 134, 160); font-weight: 600; text-transform: uppercase; letter-spacing: 0.3px;"
            >
              Language
            </dt>
            <dd
              style="color: rgb(214, 212, 224); word-break: break-word;"
            >
              English
            </dd>
            <dt
              style="color: rgb(136, 134, 160); font-weight: 600; text-transform: uppercase; letter-spacing: 0.3px;"
            >
              Format
            </dt>
            <dd
              style="color: rgb(214, 212, 224); word-break: break-word;"
            >
              epub
            </dd>
            <dt
              style="color: rgb(136, 134, 160); font-weight: 600; text-transform: uppercase; letter-spacing: 0.3px;"
            >
              MAM ID
            </dt>
            <dd
              style="color: rgb(214, 212, 224); word-break: break-word;"
            >
              <a
                href="https://www.myanonamouse.net/t/900011"
                rel="noreferrer"
                style="color: rgb(228, 184, 104); text-decoration: none;"
                target="_blank"
              >
                900011
              </a>
            </dd>
            <dt
              style="color: rgb(136, 134, 160); font-weight: 600; text-transform: uppercase; letter-spacing: 0.3px;"
            >
              Captured
            </dt>
            <dd
              style="color: rgb(214, 212, 224); word-break: break-word;"
            >
              10/9/2026, 12:10:00 PM
            </dd>
          </dl>
        </div>
        <div
          style="display: flex; flex-direction: column; gap: 8px; align-items: stretch; min-width: 110px;"
        >
          <button
            style="background: rgb(228, 184, 104); color: rgb(26, 28, 48); border: 1px solid rgb(228, 184, 104); border-radius: 8px; font-weight: 600; cursor: pointer; padding: 8px 14px; font-size: 14px;"
          >
            Approve
          </button>
          <button
            style="background: rgb(224, 96, 96); color: rgb(26, 28, 48); border: 1px solid rgb(224, 96, 96); border-radius: 8px; font-weight: 600; cursor: pointer; padding: 8px 14px; font-size: 14px;"
          >
            Reject
          </button>
          <button
            style="background: transparent; color: rgb(214, 212, 224); border: 1px solid rgb(58, 60, 86); border-radius: 8px; font-weight: 600; cursor: pointer; padding: 8px 14px; font-size: 14px;"
            title="Drop this torrent without affecting the author allow/ignore lists"
          >
            Dismiss
          </button>
        </div>
      </article>
      <article
        style="background: rgb(34, 36, 56); border: 1px solid rgb(46, 48, 72); border-radius: 12px; padding: 16px; display: grid; grid-template-columns: 80px 1fr auto; gap: 16px; animation: slide-up 0.2s ease-out; cursor: default; user-select: auto;"
      >
        <div
          style="width: 80px; height: 120px; border-radius: 6px; background: rgb(30, 32, 52); overflow: hidden; flex-shrink: 0;"
        >
          <img
            alt="Cover"
            src="/api/v1/covers/staging%2Ftentative-covers%2F62.jpg"
            style="width: 80px; height: 120px; object-fit: cover; border-radius: 6px; border: 1px solid rgb(46, 48, 72);"
          />
        </div>
        <div
          style="min-width: 0px;"
        >
          <div
            style="display: flex; align-items: baseline; gap: 10px; flex-wrap: wrap; margin-bottom: 4px;"
          >
            <h3
              style="font-size: 16px; font-weight: 700; color: rgb(236, 234, 244); word-break: break-word;"
            >
              Saltwind
            </h3>
          </div>
          <div
            style="font-size: 14px; color: rgb(214, 212, 224); margin-bottom: 8px;"
          >
            Bram Okafor
          </div>
          <dl
            style="display: grid; grid-template-columns: auto 1fr; gap: 4px 12px; font-size: 12px;"
          >
            <dt
              style="color: rgb(136, 134, 160); font-weight: 600; text-transform: uppercase; letter-spacing: 0.3px;"
            >
              Category
            </dt>
            <dd
              style="color: rgb(214, 212, 224); word-break: break-word;"
            >
              Audiobooks - Science Fiction
            </dd>
            <dt
              style="color: rgb(136, 134, 160); font-weight: 600; text-transform: uppercase; letter-spacing: 0.3px;"
            >
              Language
            </dt>
            <dd
              style="color: rgb(214, 212, 224); word-break: break-word;"
            >
              English
            </dd>
            <dt
              style="color: rgb(136, 134, 160); font-weight: 600; text-transform: uppercase; letter-spacing: 0.3px;"
            >
              Format
            </dt>
            <dd
              style="color: rgb(214, 212, 224); word-break: break-word;"
            >
              m4b
            </dd>
            <dt
              style="color: rgb(136, 134, 160); font-weight: 600; text-transform: uppercase; letter-spacing: 0.3px;"
            >
              MAM ID
            </dt>
            <dd
              style="color: rgb(214, 212, 224); word-break: break-word;"
            >
              <a
                href="https://www.myanonamouse.net/t/900012"
                rel="noreferrer"
                style="color: rgb(228, 184, 104); text-decoration: none;"
                target="_blank"
              >
                900012
              </a>
            </dd>
            <dt
              style="color: rgb(136, 134, 160); font-weight: 600; text-transform: uppercase; letter-spacing: 0.3px;"
            >
              Captured
            </dt>
            <dd
              style="color: rgb(214, 212, 224); word-break: break-word;"
            >
              10/9/2026, 1:30:00 PM
            </dd>
          </dl>
        </div>
        <div
          style="display: flex; flex-direction: column; gap: 8px; align-items: stretch; min-width: 110px;"
        >
          <button
            style="background: rgb(228, 184, 104); color: rgb(26, 28, 48); border: 1px solid rgb(228, 184, 104); border-radius: 8px; font-weight: 600; cursor: pointer; padding: 8px 14px; font-size: 14px;"
          >
            Approve
          </button>
          <button
            style="background: rgb(224, 96, 96); color: rgb(26, 28, 48); border: 1px solid rgb(224, 96, 96); border-radius: 8px; font-weight: 600; cursor: pointer; padding: 8px 14px; font-size: 14px;"
          >
            Reject
          </button>
          <button
            style="background: transparent; color: rgb(214, 212, 224); border: 1px solid rgb(58, 60, 86); border-radius: 8px; font-weight: 600; cursor: pointer; padding: 8px 14px; font-size: 14px;"
            title="Drop this torrent without affecting the author allow/ignore lists"
          >
            Dismiss
          </button>
        </div>
      </article>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tentative page (desktop) > two held announces > requests 1`] = `
[
  "GET /v1/tentative",
]
`;

exports[`Tentative page (phone) > in select mode with books ticked > markup 1`] = `
<DocumentFragment>
  <div
    style="display: flex; flex-direction: column; gap: 12px;"
  >
    <button
      aria-label="Dashboard"
      style="display: inline-flex; align-items: center; gap: 6px; height: 44px; padding: 0px 14px 0px 10px; background: rgb(30, 32, 52); color: rgb(214, 212, 224); border: 1px solid rgb(58, 60, 86); border-radius: 9999px; font-size: 14px; font-weight: 600; cursor: pointer; align-self: flex-start;"
    >
      <span
        style="font-size: 18px; line-height: 1;"
      >
        ‹
      </span>
      <span>
        Dashboard
      </span>
    </button>
    <div>
      <h1
        style="margin: 0px; font-size: 22px; font-weight: 700; color: rgb(236, 234, 244);"
      >
        New Authors
      </h1>
      <p
        style="font-size: 13px; color: rgb(150, 148, 172); margin: 4px 0px 0px;"
      >
        Torrents pending allow-list training. Approve to grab and train author; Reject to push to weekly review.
      </p>
    </div>
    <div
      style="display: flex; gap: 6px; flex-wrap: wrap;"
    >
      <button
        style="display: inline-flex; align-items: center; gap: 6px; padding: 8px 12px; min-height: 36px; background: rgba(222, 176, 96, 0.16); color: rgb(228, 184, 104); border: 1px solid rgba(222, 176, 96, 0.32); border-radius: 9999px; font-size: 13px; font-weight: 700; cursor: pointer; white-space: nowrap;"
      >
        Selecting (2)
      </button>
      <button
        style="display: inline-flex; align-items: center; gap: 6px; padding: 8px 12px; min-height: 36px; background: rgb(30, 32, 52); color: rgb(214, 212, 224); border: 1px solid rgb(58, 60, 86); border-radius: 9999px; font-size: 13px; font-weight: 500; cursor: pointer; white-space: nowrap;"
      >
        Select all
      </button>
      <button
        style="display: inline-flex; align-items: center; gap: 6px; padding: 8px 12px; min-height: 36px; background: rgb(30, 32, 52); color: rgb(214, 212, 224); border: 1px solid rgb(58, 60, 86); border-radius: 9999px; font-size: 13px; font-weight: 500; cursor: pointer; white-space: nowrap;"
      >
        Clear
      </button>
    </div>
    <div
      style="display: grid; grid-template-columns: 1fr 1fr; gap: 8px;"
    >
      <button
        style="display: inline-flex; align-items: center; justify-content: center; gap: 8px; background: rgb(228, 184, 104); color: rgb(26, 28, 48); border: 1px solid rgb(228, 184, 104); border-radius: 10px; font-size: 16px; font-weight: 600; min-height: 48px; padding: 0px 16px; width: 100%; cursor: pointer;"
      >
        <span>
          Approve 2
        </span>
      </button>
      <button
        style="display: inline-flex; align-items: center; justify-content: center; gap: 8px; background: rgb(224, 96, 96); color: rgb(26, 28, 48); border: 1px solid rgb(224, 96, 96); border-radius: 10px; font-size: 16px; font-weight: 600; min-height: 44px; padding: 0px 16px; width: 100%; cursor: pointer;"
      >
        <span>
          Reject 2
        </span>
      </button>
      <button
        style="display: inline-flex; align-items: center; justify-content: center; gap: 8px; background: transparent; color: rgb(214, 212, 224); border: 1px solid rgb(58, 60, 86); border-radius: 10px; font-size: 16px; font-weight: 600; min-height: 44px; padding: 0px 16px; width: 100%; cursor: pointer;"
      >
        <span>
          Dismiss 2
        </span>
      </button>
    </div>
    <div
      style="display: flex; flex-direction: column; gap: 8px; padding: 12px; background: rgba(222, 176, 96, 0.16); border: 1px solid rgb(228, 184, 104); border-radius: 12px; cursor: pointer;"
    >
      <div
        style="display: flex; align-items: flex-start; gap: 8px;"
      >
        <span
          style="width: 22px; height: 22px; flex-shrink: 0; border-radius: 4px; border: 2px solid rgb(228, 184, 104); background: rgb(228, 184, 104); color: rgb(26, 28, 48); display: flex; align-items: center; justify-content: center; font-size: 14px; font-weight: 700;"
        >
          ✓
        </span>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="font-size: 14px; font-weight: 700; color: rgb(236, 234, 244); line-height: 1.3;"
          >
            The Glass Orchard
          </div>
          <div
            style="font-size: 13px; color: rgb(150, 148, 172); margin-top: 2px;"
          >
            Ada Quill
          </div>
        </div>
      </div>
      <div
        style="display: flex; gap: 6px; flex-wrap: wrap;"
      >
        <span
          style="display: inline-flex; align-items: center; gap: 4px; padding: 4px 8px; background: rgb(30, 32, 52); color: rgb(214, 212, 224); border: 1px solid rgb(58, 60, 86); border-radius: 9999px; font-size: 12px; font-weight: 600; line-height: 1.2; white-space: nowrap;"
        >
          epub
        </span>
        <span
          style="display: inline-flex; align-items: center; gap: 4px; padding: 4px 8px; background: rgba(88, 184, 204, 0.14); color: rgb(88, 184, 204); border: 1px solid rgb(72, 152, 176); border-radius: 9999px; font-size: 12px; font-weight: 600; line-height: 1.2; white-space: nowrap;"
        >
          English
        </span>
        <span
          style="display: inline-flex; align-items: center; gap: 4px; padding: 4px 8px; background: rgba(222, 176, 96, 0.16); color: rgb(228, 184, 104); border: 1px solid rgba(222, 176, 96, 0.32); border-radius: 9999px; font-size: 12px; font-weight: 600; line-height: 1.2; white-space: nowrap;"
        >
          VIP
        </span>
        <span
          style="display: inline-flex; gap: 4px; flex-wrap: wrap;"
        >
          <span
            style="font-size: 10px; padding: 1px 7px; border-radius: 99px; background: rgb(30, 32, 52); color: rgb(214, 212, 224); border: 1px solid rgb(46, 48, 72); white-space: nowrap;"
          >
            Fantasy
          </span>
          <span
            style="font-size: 10px; padding: 1px 7px; border-radius: 99px; background: rgb(30, 32, 52); color: rgb(214, 212, 224); border: 1px solid rgb(46, 48, 72); white-space: nowrap;"
          >
            Mystery
          </span>
        </span>
        <a
          href="https://www.myanonamouse.net/t/900011"
          rel="noopener noreferrer"
          style="font-size: 12px; font-weight: 600; color: rgb(228, 184, 104); text-decoration: none; padding: 3px 8px; border-radius: 999px; background: rgba(222, 176, 96, 0.16);"
          target="_blank"
        >
          MAM ↗
        </a>
      </div>
    </div>
    <div
      style="display: flex; flex-direction: column; gap: 8px; padding: 12px; background: rgba(222, 176, 96, 0.16); border: 1px solid rgb(228, 184, 104); border-radius: 12px; cursor: pointer;"
    >
      <div
        style="display: flex; align-items: flex-start; gap: 8px;"
      >
        <span
          style="width: 22px; height: 22px; flex-shrink: 0; border-radius: 4px; border: 2px solid rgb(228, 184, 104); background: rgb(228, 184, 104); color: rgb(26, 28, 48); display: flex; align-items: center; justify-content: center; font-size: 14px; font-weight: 700;"
        >
          ✓
        </span>
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="font-size: 14px; font-weight: 700; color: rgb(236, 234, 244); line-height: 1.3;"
          >
            Saltwind
          </div>
          <div
            style="font-size: 13px; color: rgb(150, 148, 172); margin-top: 2px;"
          >
            Bram Okafor
          </div>
        </div>
      </div>
      <div
        style="display: flex; gap: 6px; flex-wrap: wrap;"
      >
        <span
          style="display: inline-flex; align-items: center; gap: 4px; padding: 4px 8px; background: rgb(30, 32, 52); color: rgb(214, 212, 224); border: 1px solid rgb(58, 60, 86); border-radius: 9999px; font-size: 12px; font-weight: 600; line-height: 1.2; white-space: nowrap;"
        >
          m4b
        </span>
        <span
          style="display: inline-flex; align-items: center; gap: 4px; padding: 4px 8px; background: rgba(88, 184, 204, 0.14); color: rgb(88, 184, 204); border: 1px solid rgb(72, 152, 176); border-radius: 9999px; font-size: 12px; font-weight: 600; line-height: 1.2; white-space: nowrap;"
        >
          English
        </span>
        <a
          href="https://www.myanonamouse.net/t/900012"
          rel="noopener noreferrer"
          style="font-size: 12px; font-weight: 600; color: rgb(228, 184, 104); text-decoration: none; padding: 3px 8px; border-radius: 999px; background: rgba(222, 176, 96, 0.16);"
          target="_blank"
        >
          MAM ↗
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tentative page (phone) > in select mode with books ticked > requests 1`] = `
[
  "GET /v1/tentative",
]
`;

exports[`Tentative page (phone) > two held announces > markup 1`] = `
<DocumentFragment>
  <div
    style="display: flex; flex-direction: column; gap: 12px;"
  >
    <button
      aria-label="Dashboard"
      style="display: inline-flex; align-items: center; gap: 6px; height: 44px; padding: 0px 14px 0px 10px; background: rgb(30, 32, 52); color: rgb(214, 212, 224); border: 1px solid rgb(58, 60, 86); border-radius: 9999px; font-size: 14px; font-weight: 600; cursor: pointer; align-self: flex-start;"
    >
      <span
        style="font-size: 18px; line-height: 1;"
      >
        ‹
      </span>
      <span>
        Dashboard
      </span>
    </button>
    <div>
      <h1
        style="margin: 0px; font-size: 22px; font-weight: 700; color: rgb(236, 234, 244);"
      >
        New Authors
      </h1>
      <p
        style="font-size: 13px; color: rgb(150, 148, 172); margin: 4px 0px 0px;"
      >
        Torrents pending allow-list training. Approve to grab and train author; Reject to push to weekly review.
      </p>
    </div>
    <div
      style="display: flex; gap: 6px; flex-wrap: wrap;"
    >
      <button
        style="display: inline-flex; align-items: center; gap: 6px; padding: 8px 12px; min-height: 36px; background: rgb(30, 32, 52); color: rgb(214, 212, 224); border: 1px solid rgb(58, 60, 86); border-radius: 9999px; font-size: 13px; font-weight: 500; cursor: pointer; white-space: nowrap;"
      >
        Select
      </button>
    </div>
    <div
      style="display: flex; flex-direction: column; gap: 8px; padding: 12px; background: rgb(34, 36, 56); border: 1px solid rgb(58, 60, 86); border-radius: 12px; cursor: default;"
    >
      <div
        style="display: flex; align-items: flex-start; gap: 8px;"
      >
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="font-size: 14px; font-weight: 700; color: rgb(236, 234, 244); line-height: 1.3;"
          >
            The Glass Orchard
          </div>
          <div
            style="font-size: 13px; color: rgb(150, 148, 172); margin-top: 2px;"
          >
            Ada Quill
          </div>
        </div>
      </div>
      <div
        style="display: flex; gap: 6px; flex-wrap: wrap;"
      >
        <span
          style="display: inline-flex; align-items: center; gap: 4px; padding: 4px 8px; background: rgb(30, 32, 52); color: rgb(214, 212, 224); border: 1px solid rgb(58, 60, 86); border-radius: 9999px; font-size: 12px; font-weight: 600; line-height: 1.2; white-space: nowrap;"
        >
          epub
        </span>
        <span
          style="display: inline-flex; align-items: center; gap: 4px; padding: 4px 8px; background: rgba(88, 184, 204, 0.14); color: rgb(88, 184, 204); border: 1px solid rgb(72, 152, 176); border-radius: 9999px; font-size: 12px; font-weight: 600; line-height: 1.2; white-space: nowrap;"
        >
          English
        </span>
        <span
          style="display: inline-flex; align-items: center; gap: 4px; padding: 4px 8px; background: rgba(222, 176, 96, 0.16); color: rgb(228, 184, 104); border: 1px solid rgba(222, 176, 96, 0.32); border-radius: 9999px; font-size: 12px; font-weight: 600; line-height: 1.2; white-space: nowrap;"
        >
          VIP
        </span>
        <span
          style="display: inline-flex; gap: 4px; flex-wrap: wrap;"
        >
          <span
            style="font-size: 10px; padding: 1px 7px; border-radius: 99px; background: rgb(30, 32, 52); color: rgb(214, 212, 224); border: 1px solid rgb(46, 48, 72); white-space: nowrap;"
          >
            Fantasy
          </span>
          <span
            style="font-size: 10px; padding: 1px 7px; border-radius: 99px; background: rgb(30, 32, 52); color: rgb(214, 212, 224); border: 1px solid rgb(46, 48, 72); white-space: nowrap;"
          >
            Mystery
          </span>
        </span>
        <a
          href="https://www.myanonamouse.net/t/900011"
          rel="noopener noreferrer"
          style="font-size: 12px; font-weight: 600; color: rgb(228, 184, 104); text-decoration: none; padding: 3px 8px; border-radius: 999px; background: rgba(222, 176, 96, 0.16);"
          target="_blank"
        >
          MAM ↗
        </a>
      </div>
      <div
        style="display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 8px;"
      >
        <button
          style="display: inline-flex; align-items: center; justify-content: center; gap: 8px; background: rgb(228, 184, 104); color: rgb(26, 28, 48); border: 1px solid rgb(228, 184, 104); border-radius: 10px; font-size: 16px; font-weight: 600; min-height: 48px; padding: 0px 16px; width: 100%; cursor: pointer;"
        >
          <span>
            Approve
          </span>
        </button>
        <button
          style="display: inline-flex; align-items: center; justify-content: center; gap: 8px; background: rgb(224, 96, 96); color: rgb(26, 28, 48); border: 1px solid rgb(224, 96, 96); border-radius: 10px; font-size: 16px; font-weight: 600; min-height: 44px; padding: 0px 16px; width: 100%; cursor: pointer;"
        >
          <span>
            Reject
          </span>
        </button>
        <button
          style="display: inline-flex; align-items: center; justify-content: center; gap: 8px; background: transparent; color: rgb(214, 212, 224); border: 1px solid rgb(58, 60, 86); border-radius: 10px; font-size: 16px; font-weight: 600; min-height: 44px; padding: 0px 16px; width: 100%; cursor: pointer;"
        >
          <span>
            Dismiss
          </span>
        </button>
      </div>
    </div>
    <div
      style="display: flex; flex-direction: column; gap: 8px; padding: 12px; background: rgb(34, 36, 56); border: 1px solid rgb(58, 60, 86); border-radius: 12px; cursor: default;"
    >
      <div
        style="display: flex; align-items: flex-start; gap: 8px;"
      >
        <div
          style="flex: 1 1 0%; min-width: 0px;"
        >
          <div
            style="font-size: 14px; font-weight: 700; color: rgb(236, 234, 244); line-height: 1.3;"
          >
            Saltwind
          </div>
          <div
            style="font-size: 13px; color: rgb(150, 148, 172); margin-top: 2px;"
          >
            Bram Okafor
          </div>
        </div>
      </div>
      <div
        style="display: flex; gap: 6px; flex-wrap: wrap;"
      >
        <span
          style="display: inline-flex; align-items: center; gap: 4px; padding: 4px 8px; background: rgb(30, 32, 52); color: rgb(214, 212, 224); border: 1px solid rgb(58, 60, 86); border-radius: 9999px; font-size: 12px; font-weight: 600; line-height: 1.2; white-space: nowrap;"
        >
          m4b
        </span>
        <span
          style="display: inline-flex; align-items: center; gap: 4px; padding: 4px 8px; background: rgba(88, 184, 204, 0.14); color: rgb(88, 184, 204); border: 1px solid rgb(72, 152, 176); border-radius: 9999px; font-size: 12px; font-weight: 600; line-height: 1.2; white-space: nowrap;"
        >
          English
        </span>
        <a
          href="https://www.myanonamouse.net/t/900012"
          rel="noopener noreferrer"
          style="font-size: 12px; font-weight: 600; color: rgb(228, 184, 104); text-decoration: none; padding: 3px 8px; border-radius: 999px; background: rgba(222, 176, 96, 0.16);"
          target="_blank"
        >
          MAM ↗
        </a>
      </div>
      <div
        style="display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 8px;"
      >
        <button
          style="display: inline-flex; align-items: center; justify-content: center; gap: 8px; background: rgb(228, 184, 104); color: rgb(26, 28, 48); border: 1px solid rgb(228, 184, 104); border-radius: 10px; font-size: 16px; font-weight: 600; min-height: 48px; padding: 0px 16px; width: 100%; cursor: pointer;"
        >
          <span>
            Approve
          </span>
        </button>
        <button
          style="display: inline-flex; align-items: center; justify-content: center; gap: 8px; background: rgb(224, 96, 96); color: rgb(26, 28, 48); border: 1px solid rgb(224, 96, 96); border-radius: 10px; font-size: 16px; font-weight: 600; min-height: 44px; padding: 0px 16px; width: 100%; cursor: pointer;"
        >
          <span>
            Reject
          </span>
        </button>
        <button
          style="display: inline-flex; align-items: center; justify-content: center; gap: 8px; background: transparent; color: rgb(214, 212, 224); border: 1px solid rgb(58, 60, 86); border-radius: 10px; font-size: 16px; font-weight: 600; min-height: 44px; padding: 0px 16px; width: 100%; cursor: pointer;"
        >
          <span>
            Dismiss
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tentative page (phone) > two held announces > requests 1`] = `
[
  "GET /v1/tentative",
]
`;
